Login, signup, tokens, redirect and toastsconfigured

--- a/angular/src/app/signup/signup.component.html
+++ b/angular/src/app/signup/signup.component.html
@@ -1,9 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <div class="jumbotron">
+<div class="example-container">
+<mat-card class="example-container">
       <h2>Sign up</h2>
       <form [formGroup]="signupForm" (ngSubmit)="signup()" novalidate>
         <div class="form-group">
@@ -59,9 +56,5 @@
         </div>
       </form>
       <p class="small">Already have an account? Log in <a routerLink="/login">here</a></p>
-
-      </div>
-
-    </div>
-  </div>
+  </mat-card>
 </div>
