--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -22,6 +22,7 @@
     </mat-card>
 
   </div>
+
   <div class="col-6 col-md-4">
   <mat-card>
     <h5>Create post</h5>
@@ -39,11 +40,29 @@
   </mat-card>
 
     <!-- POSTS -->
-    <mat-list *ngFor="let post of posts | async">
+    <mat-list *ngFor="let post of posts | async" style="margin-top: 10px">
       <mat-card>
-        <mat-list-item>{{post}}</mat-list-item>
+        <mat-list-item>
+        <p class="small">{{post.PostDate | date:'HH:mm | dd-MM-yyyy'}}</p>
+        </mat-list-item>
+
+        <mat-list-item>
+          <p>
+          {{post.PostContent}}
+        </p>
+        </mat-list-item>
+
+       <mat-list-item style="margin-top: 10px;">
+        <form [formGroup]="commentForm" (keydown)="createComment($event)" novalidate>
+            <mat-form-field>
+              <input matInput type="text" class="form-control" required formControlName="content" placeholder="Comment">
+            </mat-form-field>
+        </form>
+        </mat-list-item>
       </mat-card>
     </mat-list>
+
+
 
   </div>
 
@@ -56,6 +75,8 @@
     <mat-card style="margin-top: 10px">
       <h5>Profile</h5>
 
+
+      <button mat-raised-button type="button" (click)="logout()">Logout</button>
     </mat-card>
 
   </div>
