--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -22,5 +22,13 @@
       <p class="small">Don't have an account yet? Sign up <a routerLink="/signup">here</a></p>
 </mat-card>
 
+
+  <p style="margin-top: 5px">
+    Login with most data:
+    Nick22@dumest.com
+    dDumt333
+
+  </p>
+
 </div>
 
