Chat added - front functional
Chat not working with database and is global but it works atleast :100:

--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -9,6 +9,12 @@
       </mat-list>
     </mat-card>
 
+
+    <mat-card style="margin-top: 5px">
+    <h6>Chat</h6>
+      <app-chat></app-chat>
+    </mat-card>
+
     <mat-card style="margin-top: 5px">
       <h6>Friend Requests</h6>
       <hr>
