--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -25,8 +25,7 @@
 
   <p style="margin-top: 5px">
     Login with most data:
-    Nick22@dumest.com
-    dDumt333
+    44@gmail.com - 123
 
   </p>
 
