--- a/angular/src/app/chat/chat.component.html
+++ b/angular/src/app/chat/chat.component.html
@@ -1,4 +1,8 @@
-<input [(ngModel)]="message" (keydown)="sendMessage($event)"/>
+
+<input [(ngModel)]="message" (keydown)="sendMessage($event)"#todo/>
+
+
 <mat-list *ngFor="let message of messages">
-  <mat-list-item> {{message.message}}</mat-list-item>
+  <mat-list-item> {{message.message}} </mat-list-item>
 </mat-list>
+
